--- a/css/style.css
+++ b/css/style.css
@@ -424,7 +424,7 @@ p.date i {
 }
 
 .category .content .mask {
-	background-color: rgba(0,0,0,0.46);	
+	background-color: rgba(0,0,0,0.46);
 	position: absolute;
 	width: 100%;
 	top: 0;
@@ -468,7 +468,7 @@ p.date i {
 }
 
 .category-page .content .mask {
-	background-color: rgba(0,0,0,0.46);	
+	background-color: rgba(0,0,0,0.46);
 	position: absolute;
 	width: 100%;
 	top: 0;
@@ -813,7 +813,7 @@ p.date i {
 
 .profile .profile-banner {
 	background: linear-gradient(
-	 rgba(0, 0, 0, .5), 
+	 rgba(0, 0, 0, .5),
 	 rgba(0, 0, 0, .5)),
 	  url('../images/bg-profile.jpg');
 	background-size: cover;
@@ -1562,7 +1562,7 @@ form input {
 	padding: 0 10px !important;
 	box-sizing: border-box !important;
 	margin-bottom: 15px !important;
-	background: #f1f1f1 !important;
+	/*background: #f1f1f1 !important;*/
 	border-radius: 3px !important;
 	font-size: 15px !important;
 }
