adjusted css .row width

--- a/css/style.css
+++ b/css/style.css
@@ -165,8 +165,8 @@ p.date i {
 
 /* row custom */
 .container .row {
-	margin-left: -0.75rem;
-	margin-right: -0.75rem;
+	/*margin-left: -0.75rem;
+	margin-right: -0.75rem;*/
 }
 
 /*button default*/
