--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,31 @@ footer
 /*font*/
  @import url('https://fonts.googleapis.com/css?family=Berkshire+Swash|Roboto:300,400,500,700,900');
 
+/* general div loader */
+#loader {
+border: 16px solid #f3f3f3;
+border-radius: 50%;
+border-top: 16px solid #3498db;
+width: 120px;
+height: 120px;
+-webkit-animation: spin 2s linear infinite;
+animation: spin 2s linear infinite;
+margin-left:250px;
+/* margin-top:250px; */
+}
+
+
+@-webkit-keyframes spin {
+0% { -webkit-transform: rotate(0deg); }
+100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+0% { transform: rotate(0deg); }
+100% { transform: rotate(360deg); }
+}
+/* general div loader */
+
 /*general*/
 body {
 	font-family: 'Roboto', sans-serif;
