--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,12 @@ footer
 /*font*/
  @import url('https://fonts.googleapis.com/css?family=Berkshire+Swash|Roboto:300,400,500,700,900');
 
+/* active nav links */
+#slide-out > .active {
+  /* background-color: black; */
+}
+/* active nav links */
+
 /* general div loader */
 #loader {
 border: 16px solid #f3f3f3;
@@ -55,7 +61,7 @@ width: 120px;
 height: 120px;
 -webkit-animation: spin 2s linear infinite;
 animation: spin 2s linear infinite;
-margin-left:250px;
+margin-left:50%;
 /* margin-top:250px; */
 }
 
