--- a/css/counter.css
+++ b/css/counter.css
@@ -29,42 +29,42 @@ section {
     border-radius: 50%;
     cursor: pointer;
 }
-#timer .countdown-wrapper #countdown #day {
+#timer .countdown-wrapper #countdown .day {
     -webkit-box-shadow: 0 0 0 5px rgba(92, 184, 92, .5);
     -moz-box-shadow: 0 0 0 5px rgba(92, 184, 92, .5);
     box-shadow: 0 0 0 5px rgba(92, 184, 92, .5);
 }
-#timer .countdown-wrapper #countdown #day:hover {
+#timer .countdown-wrapper #countdown .day:hover {
     -webkit-box-shadow: 0px 0px 15px 1px rgba(92, 184, 92, 1);
     -moz-box-shadow: 0px 0px 15px 1px rgba(92, 184, 92, 1);
     box-shadow: 0px 0px 15px 1px rgba(92, 184, 92, 1);
 }
-#timer .countdown-wrapper #countdown #hour {
+#timer .countdown-wrapper #countdown .hour {
     -webkit-box-shadow: 0 0 0 5px rgba(91, 192, 222, .5);
     -moz-box-shadow: 0 0 0 5px rgba(91, 192, 222, .5);
     box-shadow: 0 0 0 5px rgba(91, 192, 222, .5);
 }
-#timer .countdown-wrapper #countdown #hour:hover {
+#timer .countdown-wrapper #countdown .hour:hover {
     -webkit-box-shadow: 0px 0px 15px 1px rgba(91, 192, 222, 1);
     -moz-box-shadow: 0px 0px 15px 1px rgba(91, 192, 222, 1);
     box-shadow: 0px 0px 15px 1px rgba(91, 192, 222, 1);
 }
-#timer .countdown-wrapper #countdown #min {
+#timer .countdown-wrapper #countdown .min {
     -webkit-box-shadow: 0 0 0 5px rgba(91, 192, 222, .5);
     -moz-box-shadow: 0 0 0 5px rgba(91, 192, 222, .5);
     box-shadow: 0 0 0 5px rgba(91, 192, 222, .5);
 }
-#timer .countdown-wrapper #countdown #min:hover {
+#timer .countdown-wrapper #countdown .min:hover {
     -webkit-box-shadow: 0px 0px 15px 1px rgb(91, 192, 222);
     -moz-box-shadow: 0px 0px 15px 1px rgb(91, 192, 222);
     box-shadow: 0px 0px 15px 1px rgb(91, 192, 222);
 }
-#timer .countdown-wrapper #countdown #sec {
+#timer .countdown-wrapper #countdown .sec {
     -webkit-box-shadow: 0 0 0 5px rgba(255, 0, 0, .5);
     -moz-box-shadow: 0 0 0 5px rgba(255, 0, 0, .5);
     box-shadow: 0 0 0 5px rgba(255, 0, 0, .5)
 }
-#timer .countdown-wrapper #countdown #sec:hover {
+#timer .countdown-wrapper #countdown .sec:hover {
     -webkit-box-shadow: 0px 0px 15px 1px rgba(255, 0, 0, 1);
     -moz-box-shadow: 0px 0px 15px 1px rgba(255, 0, 0, 1);
     box-shadow: 0px 0px 15px 1px rgba(255, 0, 0, 1);
@@ -100,19 +100,19 @@ section {
     }
 }
 @media (max-width: 767px) {
-    #timer .countdown-wrapper #countdown #day,
-    #timer .countdown-wrapper #countdown #hour,
-    #timer .countdown-wrapper #countdown #min,
-    #timer .countdown-wrapper #countdown #sec {
+    #timer .countdown-wrapper #countdown .day,
+    #timer .countdown-wrapper #countdown .hour,
+    #timer .countdown-wrapper #countdown .min,
+    #timer .countdown-wrapper #countdown .sec {
         font-size: 60px;
         border-radius: 4%;
     }
 }
 @media (max-width: 576px){
-    #timer .countdown-wrapper #countdown #day,
-    #timer .countdown-wrapper #countdown #hour,
-    #timer .countdown-wrapper #countdown #min,
-    #timer .countdown-wrapper #countdown #sec {
+    #timer .countdown-wrapper #countdown .day,
+    #timer .countdown-wrapper #countdown .hour,
+    #timer .countdown-wrapper #countdown .min,
+    #timer .countdown-wrapper #countdown .sec {
         font-size: 25px;
         border-radius: 4%;
     }
